5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4352/executions/1771_674.log
== TEST (2019-05-23 18:22:21) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo
from numpy import*
v = array(eval(input("digite seu vetor: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 18:22:24) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo
from numpy import*
v = array(eval(input("digite seu vetor: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 18:22:50) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo
from numpy import*
v = array(eval(input("digite seu vetor: ")))
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 18:22:55) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
# Use o navegador Chrome, para copiar/colar a entrada de exemplo
from numpy import*
v = array(eval(input("digite seu vetor: ")))
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 18:31:12) 
-- CODE:
from numpy import*
v = array(eval(input("digite seu vetor: ")))
quantv = size(v)
pe = [0]
ue = 
maior = max(v)
menor = min(v)
soma = sum(v)
media = soma/quantv
print(quantv)
print(pe)
print(ue)
print(maior)
print(menor)
print(soma)
print(round(media, 2))
-- ERROR:
File "XXXX", line 5
    ue = 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 18:31:25) 
-- CODE:
from numpy import*
v = array(eval(input("digite seu vetor: ")))
quantv = size(v)
pe = [0]
ue = [5] 
maior = max(v)
menor = min(v)
soma = sum(v)
media = soma/quantv
print(quantv)
print(pe)
print(ue)
print(maior)
print(menor)
print(soma)
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 18:31:35) 
-- CODE:
from numpy import*
v = array(eval(input("digite seu vetor: ")))
quantv = size(v)
pe = [0]
ue = [5] 
maior = max(v)
menor = min(v)
soma = sum(v)
media = soma/quantv
print(quantv)
print(pe)
print(ue)
print(maior)
print(menor)
print(soma)
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 18:32:14) 
-- CODE:
from numpy import*
v = array(eval(input("digite seu vetor: ")))
quantv = size(v)
pe = [[0]]
ue = [[5]]
maior = max(v)
menor = min(v)
soma = sum(v)
media = soma/quantv
print(quantv)
print(pe)
print(ue)
print(maior)
print(menor)
print(soma)
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 18:32:19) 
-- CODE:
from numpy import*
v = array(eval(input("digite seu vetor: ")))
quantv = size(v)
pe = [[0]]
ue = [[5]]
maior = max(v)
menor = min(v)
soma = sum(v)
media = soma/quantv
print(quantv)
print(pe)
print(ue)
print(maior)
print(menor)
print(soma)
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 18:32:23) 
-- CODE:
from numpy import*
v = array(eval(input("digite seu vetor: ")))
quantv = size(v)
pe = [[0]]
ue = [[5]]
maior = max(v)
menor = min(v)
soma = sum(v)
media = soma/quantv
print(quantv)
print(pe)
print(ue)
print(maior)
print(menor)
print(soma)
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 18:32:47) 
-- CODE:
from numpy import*
v = array(eval(input("digite seu vetor: ")))
quantv = size(v)
pe = pe[0]
ue = ue[5]
maior = max(v)
menor = min(v)
soma = sum(v)
media = soma/quantv
print(quantv)
print(pe)
print(ue)
print(maior)
print(menor)
print(soma)
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 18:32:59) 
-- CODE:
from numpy import*
v = array(eval(input("digite seu vetor: ")))
quantv = size(v)
pe = v[0]
ue = v[5]
maior = max(v)
menor = min(v)
soma = sum(v)
media = soma/quantv
print(quantv)
print(pe)
print(ue)
print(maior)
print(menor)
print(soma)
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 18:33:04) 
-- CODE:
from numpy import*
v = array(eval(input("digite seu vetor: ")))
quantv = size(v)
pe = v[0]
ue = v[5]
maior = max(v)
menor = min(v)
soma = sum(v)
media = soma/quantv
print(quantv)
print(pe)
print(ue)
print(maior)
print(menor)
print(soma)
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 18:35:52) 
-- CODE:
from numpy import*
v = array(eval(input("digite seu vetor: ")))
quantv = size(v)
maior = max(v)
menor = min(v)
soma = sum(v)
media = soma/quantv
print(quantv)
print(v[0])
print(v[5])
print(maior)
print(menor)
print(soma)
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 18:35:59) 
-- CODE:
from numpy import*
v = array(eval(input("digite seu vetor: ")))
quantv = size(v)
maior = max(v)
menor = min(v)
soma = sum(v)
media = soma/quantv
print(quantv)
print(v[0])
print(v[5])
print(maior)
print(menor)
print(soma)
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 18:36:25) 
-- CODE:
from numpy import*
v = array(eval(input("digite seu vetor: ")))
quantv = size(v)
maior = max(v)
menor = min(v)
soma = sum(v)
media = soma/quantv
print(quantv)
print(v[0])
print(v[4])
print(maior)
print(menor)
print(soma)
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 18:36:41) 
-- CODE:
from numpy import*
v = array(eval(input("digite seu vetor: ")))
quantv = size(v)
maior = max(v)
menor = min(v)
soma = sum(v)
media = soma/quantv
print(quantv)
print(v[0])
print(v[4])
print(maior)
print(menor)
print(soma)
print(round(media, 2))
-- EXECUTION TIME:
0.473769
-- TEST CASE 1:
---- input:
[13,10,1,9,7,20,5,20,14,16,5,13,11,7,6,2,19,18,8,19,13,5,8,4,3,16,8,7,9,2,13,11,14,10,15,11,6,17,16,10,15,6,12,9,4,15,16,10,15,7,17,10,9,6,12,18,2,9,5,17,19,5,20,4,5,11,3,15,15,3,20,11,5,13,9,16,14,15,11,19,15,9,14,10,7,1,6,7]
---- correct output:
88
13
7
20
1
937
10.65
---- user output:
88
13
7
20
1
937
10.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
